--- a/docs/schemas.adoc
+++ b/docs/schemas.adoc
@@ -8,9 +8,19 @@ Define forms for management of structured content
 
 == Introduction
 
-To facilitate creation of structured content Content Studio, Enonic XP ships with a high-level schema concept that requires no coding.
+To facilitate creation of structured content, Enonic CMS ships with a high-level schema concept that requires no coding.
 
 Each schema will produce a deterministic set of properties with valid values and indexing rules. Content can be submitted through both via UI, and API.
+
+== TODO
+A basic concept used throughout the CMS is called schemas.
+Schemas enable developers to easily define various types of forms used throughout the CMS.
+
+The schema system provides a 1:1 mapping between schema fields and corresponding document properties.
+For instance, a text input called "title", is mapped to a property called "title" in the underlying document structure.
+
+The schema system provides a range of standard <<cms/schemas/input-types#, Input types>>, such as TextLine and ContentSelector.
+It also offers advanced form components such as ItemSets and OptionSets for creating nested sets of data and optional sets of data.
 
 [#forms]
 == Forms
